More sync from trunk
git-svn-id: https://jna.dev.java.net/svn/jna/branches/jnalib-ffi@89 05a1902d-0e30-0410-9027-c8643ccd90df